# Embedded-Device-Controller-C-

./: CMakeLists.txt  README.md
src/: DeviceDriver.cpp  UserSpaceApp.cpp
